--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -2,9 +2,10 @@
 layout: page
 title: Programowanie współbieżne i rozproszone
 permalink: /for-students/pwir
+exclude: true
 ---
 
-#### Slajdy do wykładu
+#### Slajdy
 
 Część I
 =======
