--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -5,6 +5,13 @@ permalink: /for-students/pwir
 exclude: true
 ---
 
+Informacje:
+
+Terminy kolokwiów:
+1. 23 listopada 2016
+2. 18 stycznia 2016
+
+
 #### Slajdy
 
 Część I
