--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -5,7 +5,7 @@ permalink: /for-students/pwir
 exclude: true
 ---
 
-### Informacje:
+## Informacje:
 
 Terminy kolokwiów:
 
@@ -13,17 +13,14 @@ Terminy kolokwiów:
 2. 18 stycznia 2016
 
 
-#### Slajdy
+## Slajdy
 
-Część I
-=======
+### Część I
 <iframe src="https://docs.google.com/presentation/d/1uDHyqTuH74eFHItjUmK2E1E-GVj_0vT1WCtxYCzwe2c/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
-Część II
-========
+### Część II
 <iframe src="https://docs.google.com/presentation/d/1-BQnhYND_cDnnxKhY0zOH7es74rOmW1RnU6SMwZhePA/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
-Część III
-=========
+### Część III
 Pojawi się wkrótce...
 
