--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -5,17 +5,7 @@ permalink: /for-students/pwir
 exclude: true
 ---
 
-# H1
-
-## H2
-
-### H3
-
-#### H4
-
-##### H5
-
-## Informacje
+# Informacje
 
 Terminy kolokwiów:
 
@@ -23,7 +13,7 @@ Terminy kolokwiów:
 2. 18 stycznia 2016
 
 
-## Slajdy
+# Slajdy
 
 Część I
 <iframe src="https://docs.google.com/presentation/d/1uDHyqTuH74eFHItjUmK2E1E-GVj_0vT1WCtxYCzwe2c/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
