--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -9,8 +9,8 @@ exclude: true
 
 Terminy kolokwiów:
 
-1. 23 listopada 2016
-2. 18 stycznia 2016
+1. 23 listopada 2016 r. <span color=red>UWAGA: Zmiana terminu z uwagi na otrzęsiny!!! Nowy termin: <b>30 listopada 2016 r.</a></span>
+2. 18 stycznia 2016 r.
 
 
 # Slajdy
