--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -9,7 +9,7 @@ exclude: true
 
 Terminy kolokwiów:
 
-1. 23 listopada 2016 r. <div style="color: red;">UWAGA: Zmiana terminu z uwagi na otrzęsiny!!! Nowy termin: <b>30 listopada 2016 r.</a></div>
+1. 23 listopada 2016 r. <b>UWAGA: Zmiana terminu z uwagi na otrzęsiny!!! Nowy termin: <u>30 listopada 2016 r.</u></b></div>
 2. 18 stycznia 2016 r.
 
 
