--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -7,7 +7,21 @@ exclude: true
 
 # Informacje
 
-Terminy kolokwiów:
+PGS Software - wykłady dla studentów
+
+>Szanowne Koleżanki, Szanowni Koledzy,
+>Opiekunowie poszczególnych lat studiów
+> 
+>Proszę o przekazanie studentom lat, którymi się opiekujecie następującej informacji:
+> 
+>Począwszy od 28.11.2016 r. w każdy poniedziałek od godz. 17:00 w sali 127 (aula) przedstawiciele firmy PGS Software (dużego rzeszowskiego pracodawcy w branży IT) będą prowadzić wykłady i/lub warsztaty dla studentów zainteresowanych informatyką. Tegoroczne wykłady są kontynuacją inicjatywy, która po raz pierwszy zaistniała w ubiegłym roku i cieszyła się dużym zainteresowaniem studentów. Część z uczestników zachęcona tymi zajęciami wybrała jako miejsce wakacyjnych praktyk firmę PGS Software i przypadku niektórych skończyło się to … indywidualną organizacją obecnego semestru z uwagi na podjęcie pracy zawodowej.
+>Tematyka wykładów / warsztatów będzie dotyczyć posługiwania się narzędziami informatycznymi, używanymi przy tworzeniu aplikacji internetowych (i nie tylko). Zajęcia rozpoczną się od poziomu podstawowego i będą trochę różnić się od ubiegłorocznych.
+> 
+>W przypadku kierunku Informatyka i ekonometria, w rozmowie ze studentami proszę przypomnieć im, że w letnim semestrze będą wybierać specjalność. Zajęcia mogą być pomocne w podjęciu decyzji, czy specjalność na jaką się zdecydują będzie matematyczna, czy informatyczna.
+> 
+>Pozdr, WR
+
+# Terminy kolokwiów:
 
 1. 23 listopada 2016 r. <b>UWAGA: Zmiana terminu z uwagi na otrzęsiny!!! Nowy termin: <u>30 listopada 2016 r.</u></b>
 2. 18 stycznia 2016 r.
