--- a/for-students/tgui2016.md
+++ b/for-students/tgui2016.md
@@ -9,7 +9,7 @@ exclude: true
 
 # Laboratorium
 
-<iframe src="https://docs.google.com/document/d/e/2PACX-1vRdJkt1Ead97JKsi5fkici8FhGD2ZOMA-XmEkUns50ASv-rOw3t09827Rs7s3yFdh9wMHJhru5ymWmY/pub?embedded=true"></iframe>
+<iframe width=800 height=800 src="https://docs.google.com/document/d/e/2PACX-1vRdJkt1Ead97JKsi5fkici8FhGD2ZOMA-XmEkUns50ASv-rOw3t09827Rs7s3yFdh9wMHJhru5ymWmY/pub?embedded=true"></iframe>
 
 # Slajdy
 
