--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -14,6 +14,8 @@ Zasady zaliczenia:
 3. Kolokwia wykładowe.
 4. Egzamin.
 
+* [<b>Wyniki z pierwszego kolokwium</b>](pwir-wyniki-2016.pdf)
+
 # Terminy kolokwiów:
 
 1. 23 listopada 2016 r. <b>UWAGA: Zmiana terminu z uwagi na otrzęsiny!!! Nowy termin: <u>30 listopada 2016 r.</u></b>
