--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -14,7 +14,7 @@ Zasady zaliczenia:
 3. Kolokwia wykładowe.
 4. Egzamin.
 
-* [<b>Wyniki z pierwszego kolokwium</b>](pwir-wyniki-2016.pdf)
+* [<b>Wyniki z pierwszego kolokwium</b>](pwir-wyniki-2016.pdf) Kolokwia do wglądu w godzinach konsultacji.
 
 # Terminy kolokwiów:
 
