--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -18,7 +18,7 @@ Zasady zaliczenia:
 
 # Terminy kolokwiów:
 
-1. 23 listopada 2016 r. <b>UWAGA: Zmiana terminu z uwagi na otrzęsiny!!! Nowy termin: <u>30 listopada 2016 r.</u></b>
+1. 30 listopada 2016 r. 
 2. 18 stycznia 2016 r.
 
 
