--- a/for-students/tgui2016.md
+++ b/for-students/tgui2016.md
@@ -9,6 +9,34 @@ exclude: true
 
 # Laboratorium
 
+## Zajęcia laboratoryjne
+I. Propozycje projektów i analiza
+    1. Wybór typu projektu:
+        a) Interfejs webowy.
+        b) Interfejs desktopowy.
+        c) Interfejs mobilny.
+        d) Inny.
+    2. Wybór konkretnego tematu.
+    3. Analiza.
+        a) Charakterystyka użytkowników (zebranie informacji od 3 użytkowników).
+        b) Określenie zadań związanych z projektem. Np. aplikacja powinna umożliwiać zamówienie taksówki, która znajduje się najbliżej.
+        c) Istotne elementy interfejsu (od strony technicznej). Zależności pomiędzy komponentami. Zdefiniowanie podstawowych elementów systemu w formie diagramu.
+    4. Strona internetowa projektu, która docelowo będzie stanowić końcowy raport dotyczący wykonanego projektu.
+II. Projektowanie
+Scenariusz. Napisz scenariusz zachowania użytkownika, który uwzględnia zadania zdefiniowane w punkcie 1. Zadania w scenariuszu powinny być konkretne i odnosić się do wybranego typu interfejsu i komponentów wybranego projektu.
+Storyboard. Wygeneruj trzy wstępne projekty interfejsu użytkownika. Wyjaśnij każdy z nich i załącz storyboard pokazujące jak interfejs działa. Storyboard powinien łączyć opis z odpowiednimi szkicami pokazując jak interfejs będzie się zmieniał zgodnie ze scenariuszem. Po dokonaniu takiej analizy powinieneś móc wskazać dobre i złe strony projektu interfejsu z punktu widzenia przyswajalności, przejrzystości, wydajności i odporności na błędy.
+Uwagi:
+Nie wchodź zbytnio w szczegóły. Skup się na koncepcji modelu interfejsu i komunikacji z użytkownikiem oraz na prostocie. Poświęcanie zbyt dużo czasu na projektowanie szczegółowego wyglądu interfejsu na tym etapie jest bezcelowe - w kolejnej iteracji może się zdarzyć, że konieczne będą duże zmiany.
+Preferowane są rysunki odręczne. Po narysowaniu należy dołączyć je (np. robiąc zdjęcie) do strony - raportu.
+III. Prototypowanie na papierze
+Budowanie prototypu. Narysuj tło, menu, okienka dialogowe i inne potrzebne elementy interfejsu. Zdecyduj, jak zaimplementować dynamiczne części interfejsu. Nie musisz przygotowywać każdego możliwego ekranu. Naucz się tworzyć potrzebne okna “w biegu”.
+Przygotuj briefing dla użytkowników. Przygotuj co najwyżej jedną stronę tekstu, który wyjaśni jaki jest zastosowanie Twojej aplikacji. Podaj potrzebne informacje potrzebne dla użytkownika testowego. Informacje powinny być krótkie, proste i przejrzyste. Pamiętaj, że briefing to nie podręcznik ani instrukcja użytkownika.
+Zapisz zadania ze scenariusza na osobnych karteczkach. Scenariusz powinien uwzględniać przynajmniej 3 zadania. Zapisz je i przekaż testerom. Sformułuj je w postaci konkretnych zadań (np. “Kup mleko, pomidory i chleb”). Zadania powinny być krótkie (co najwyżej 5 minut).
+Wybierz 2-3 osoby i poproś je o to, aby przetestowały Twój interfejs.
+Zapisz obserwacje. Jeśli wystąpiły jakieś problemy, wyciągnij wnioski i popraw swój prototyp.
+IV. Prototypowanie na komputerze
+V. Implementacja
+VI. Testowanie
 
  * [Skrypt](https://docs.google.com/document/d/e/2PACX-1vRdJkt1Ead97JKsi5fkici8FhGD2ZOMA-XmEkUns50ASv-rOw3t09827Rs7s3yFdh9wMHJhru5ymWmY/pub)
 
