--- a/for-students/tgui2016.md
+++ b/for-students/tgui2016.md
@@ -11,19 +11,20 @@ exclude: true
 
 ## Zajęcia laboratoryjne
 
-I. Propozycje projektów i analiza
-    1. Wybór typu projektu:
-        a) Interfejs webowy.
-        b) Interfejs desktopowy.
-        c) Interfejs mobilny.
-        d) Inny.
-    2. Wybór konkretnego tematu.
-    3. Analiza.
-        a) Charakterystyka użytkowników (zebranie informacji od 3 użytkowników).
-        b) Określenie zadań związanych z projektem. Np. aplikacja powinna umożliwiać zamówienie taksówki, która znajduje się najbliżej.
-        c) Istotne elementy interfejsu (od strony technicznej). Zależności pomiędzy komponentami. Zdefiniowanie podstawowych elementów systemu w formie diagramu.
-    4. Strona internetowa projektu, która docelowo będzie stanowić końcowy raport dotyczący wykonanego projektu.
-II. Projektowanie
+1. Propozycje projektów i analiza
+ a. Wybór typu projektu:
+  * Interfejs webowy.
+  * Interfejs desktopowy.
+  * Interfejs mobilny.
+  * Inny.
+ b. Wybór konkretnego tematu.
+ c. Analiza.
+  * Charakterystyka użytkowników (zebranie informacji od 3 użytkowników).
+  * Określenie zadań związanych z projektem. Np. aplikacja powinna umożliwiać zamówienie taksówki, która znajduje się najbliżej.
+  * Istotne elementy interfejsu (od strony technicznej). Zależności pomiędzy komponentami. Zdefiniowanie podstawowych elementów systemu w formie diagramu.
+ d. Strona internetowa projektu, która docelowo będzie stanowić końcowy raport dotyczący wykonanego projektu.
+
+2. Projektowanie
 Scenariusz. Napisz scenariusz zachowania użytkownika, który uwzględnia zadania zdefiniowane w punkcie 1. Zadania w scenariuszu powinny być konkretne i odnosić się do wybranego typu interfejsu i komponentów wybranego projektu.
 Storyboard. Wygeneruj trzy wstępne projekty interfejsu użytkownika. Wyjaśnij każdy z nich i załącz storyboard pokazujące jak interfejs działa. Storyboard powinien łączyć opis z odpowiednimi szkicami pokazując jak interfejs będzie się zmieniał zgodnie ze scenariuszem. Po dokonaniu takiej analizy powinieneś móc wskazać dobre i złe strony projektu interfejsu z punktu widzenia przyswajalności, przejrzystości, wydajności i odporności na błędy.
 Uwagi:
