--- a/for-students/tgui2016.md
+++ b/for-students/tgui2016.md
@@ -12,7 +12,7 @@ exclude: true
 ## Zajęcia laboratoryjne
 
 1. Propozycje projektów i analiza
- a. Wybór typu projektu:
+ 1.1 Wybór typu projektu:
   * Interfejs webowy.
   * Interfejs desktopowy.
   * Interfejs mobilny.
