--- a/for-students/tgui2016.md
+++ b/for-students/tgui2016.md
@@ -13,7 +13,7 @@ exclude: true
 
 1. Propozycje projektów i analiza
  
- 1 Wybór typu projektu:
+ a) Wybór typu projektu:
   * Interfejs webowy.
   * Interfejs desktopowy.
   * Interfejs mobilny.
