--- a/for-students/tgui2016.md
+++ b/for-students/tgui2016.md
@@ -12,18 +12,13 @@ exclude: true
 ## Zajęcia laboratoryjne
 
 1. Propozycje projektów i analiza
-
- a) Wybór typu projektu:
-  * Interfejs webowy.
-  * Interfejs desktopowy.
-  * Interfejs mobilny.
-  * Inny.
- b. Wybór konkretnego tematu.
- c. Analiza.
-  * Charakterystyka użytkowników (zebranie informacji od 3 użytkowników).
-  * Określenie zadań związanych z projektem. Np. aplikacja powinna umożliwiać zamówienie taksówki, która znajduje się najbliżej.
-  * Istotne elementy interfejsu (od strony technicznej). Zależności pomiędzy komponentami. Zdefiniowanie podstawowych elementów systemu w formie diagramu.
- d. Strona internetowa projektu, która docelowo będzie stanowić końcowy raport dotyczący wykonanego projektu.
+ * Wybór typu projektu (Interfejs webowy, interfejs desktopowy, interfejs mobilny, inny).
+ * Wybór konkretnego tematu.
+ * Analiza.
+  : Charakterystyka użytkowników (zebranie informacji od 3 użytkowników).
+  : Określenie zadań związanych z projektem. Np. aplikacja powinna umożliwiać zamówienie taksówki, która znajduje się najbliżej.
+  : Istotne elementy interfejsu (od strony technicznej). Zależności pomiędzy komponentami. Zdefiniowanie podstawowych elementów systemu w formie diagramu.
+ * Strona internetowa projektu, która docelowo będzie stanowić końcowy raport dotyczący wykonanego projektu.
 
 2. Projektowanie
 Scenariusz. Napisz scenariusz zachowania użytkownika, który uwzględnia zadania zdefiniowane w punkcie 1. Zadania w scenariuszu powinny być konkretne i odnosić się do wybranego typu interfejsu i komponentów wybranego projektu.
