--- a/for-students/tgui2016.md
+++ b/for-students/tgui2016.md
@@ -18,8 +18,7 @@ exclude: true
 2. Projektowanie.
   * *Scenariusz*. Napisz scenariusz zachowania użytkownika, który uwzględnia zadania zdefiniowane w punkcie 1. Zadania w scenariuszu powinny być konkretne i odnosić się do wybranego typu interfejsu i komponentów wybranego projektu.
   * *Storyboard*. Wygeneruj trzy wstępne projekty interfejsu użytkownika. Wyjaśnij każdy z nich i załącz storyboard pokazujące jak interfejs działa. Storyboard powinien łączyć opis z odpowiednimi szkicami pokazując jak interfejs będzie się zmieniał zgodnie ze scenariuszem. Po dokonaniu takiej analizy powinieneś móc wskazać dobre i złe strony projektu interfejsu z punktu widzenia przyswajalności, przejrzystości, wydajności i odporności na błędy.
-
- + Nie wchodź zbytnio w szczegóły. Skup się na koncepcji modelu interfejsu i komunikacji z użytkownikiem oraz na prostocie. Poświęcanie zbyt dużo czasu na projektowanie szczegółowego wyglądu interfejsu na tym etapie jest bezcelowe - w kolejnej iteracji może się zdarzyć, że konieczne będą duże zmiany. Preferowane są rysunki odręczne. Po narysowaniu należy dołączyć je (np. robiąc zdjęcie) do strony - raportu.
+ ++ Nie wchodź zbytnio w szczegóły. Skup się na koncepcji modelu interfejsu i komunikacji z użytkownikiem oraz na prostocie. Poświęcanie zbyt dużo czasu na projektowanie szczegółowego wyglądu interfejsu na tym etapie jest bezcelowe - w kolejnej iteracji może się zdarzyć, że konieczne będą duże zmiany. Preferowane są rysunki odręczne. Po narysowaniu należy dołączyć je (np. robiąc zdjęcie) do strony - raportu.
 
 3. Prototypowanie na papierze
   * Budowanie prototypu. Narysuj tło, menu, okienka dialogowe i inne potrzebne elementy interfejsu. Zdecyduj, jak zaimplementować dynamiczne części interfejsu. Nie musisz przygotowywać każdego możliwego ekranu. Naucz się tworzyć potrzebne okna “w biegu”.
