--- a/for-students/tgui2016.md
+++ b/for-students/tgui2016.md
@@ -22,8 +22,8 @@ exclude: true
 
 3. Prototypowanie na papierze
   * Budowanie prototypu. Narysuj tło, menu, okienka dialogowe i inne potrzebne elementy interfejsu. Zdecyduj, jak zaimplementować dynamiczne części interfejsu. Nie musisz przygotowywać każdego możliwego ekranu. Naucz się tworzyć potrzebne okna “w biegu”.
-  * Przygotuj briefing dla użytkowników. Przygotuj co najwyżej jedną stronę tekstu, który wyjaśni jaki jest zastosowanie Twojej aplikacji. Podaj potrzebne informacje potrzebne dla użytkownika testowego. Informacje powinny być krótkie, proste i przejrzyste. Pamiętaj, że briefing to nie podręcznik ani instrukcja użytkownika.
-  * Zapisz zadania ze scenariusza na osobnych karteczkach. Scenariusz powinien uwzględniać przynajmniej 3 zadania. Zapisz je i przekaż testerom. Sformułuj je w postaci konkretnych zadań (np. “Kup mleko, pomidory i chleb”). Zadania powinny być krótkie (co najwyżej 5 minut).
+  * Przygotuj briefing dla użytkowników. Przygotuj co najwyżej jedną stronę tekstu, który wyjaśni jakie jest zastosowanie Twojej aplikacji. Podaj potrzebne informacje potrzebne dla użytkownika testowego. Informacje powinny być krótkie, proste i przejrzyste. Pamiętaj, że briefing to nie podręcznik ani instrukcja użytkownika.
+  * Zapisz zadania ze scenariusza na osobnych karteczkach. Scenariusz powinien uwzględniać przynajmniej 3 zadania. Zapisz je i przekaż testerom. Sformułuj je w postaci konkretnych zadań (np. “Kup mleko, pomidory i chleb”). Zadania powinny być krótkie (wykonanie jednego nie powinno zająć więcej niż 5 minut).
   * Wybierz 2-3 osoby i poproś je o to, aby przetestowały Twój interfejs.
   * Zapisz obserwacje. Jeśli wystąpiły jakieś problemy, wyciągnij wnioski i popraw swój prototyp.
   
