--- a/for-students/tgui2016.md
+++ b/for-students/tgui2016.md
@@ -28,10 +28,13 @@ exclude: true
   * Zapisz obserwacje. Jeśli wystąpiły jakieś problemy, wyciągnij wnioski i popraw swój prototyp.
   
 4. Prototypowanie na komputerze
+  * TBA
+  
 5. Implementacja
+  * TBA
+  
 6. Testowanie
-
- * [Skrypt](https://docs.google.com/document/d/e/2PACX-1vRdJkt1Ead97JKsi5fkici8FhGD2ZOMA-XmEkUns50ASv-rOw3t09827Rs7s3yFdh9wMHJhru5ymWmY/pub)
+  * TBA
 
 
 # Slajdy
