--- a/for-students/tgui2016.md
+++ b/for-students/tgui2016.md
@@ -7,6 +7,10 @@ exclude: true
 
 # Informacje
 
+Zaliczenie:
+* Obecność i praca na laboratorium zakończona prezentacją raportu.
+* Kolokwium z treści wykładowych.
+
 # Laboratorium
 
 1. Propozycje projektów i analiza
@@ -39,4 +43,4 @@ exclude: true
 
 # Slajdy
 
-
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQYfsVYcRhJLq7fVcJuAmommmwoa8wMp3Y_KdMRfih5OdwjYACNnTrQhV52htrk3Ownq45SCrbTwoF6/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
