--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -28,4 +28,6 @@ Zasady zaliczenia:
 
 <iframe src="https://docs.google.com/presentation/d/1-BQnhYND_cDnnxKhY0zOH7es74rOmW1RnU6SMwZhePA/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTILs3oe7eHjXxdjyn4tKi8AV1eAIhKFN5Edgomuj2GGe7xrl-9lOrBk54fcGm5AeazlZyaD8MW9wgK/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
 <iframe src="https://docs.google.com/presentation/d/15ei5fcm-6qwNDKQeB8iJOrvD-ijIN5OLTCAuPaL7Ewg/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
