--- a/for-students/tgui2016.md
+++ b/for-students/tgui2016.md
@@ -45,3 +45,7 @@ Zaliczenie:
 # Slajdy
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQYfsVYcRhJLq7fVcJuAmommmwoa8wMp3Y_KdMRfih5OdwjYACNnTrQhV52htrk3Ownq45SCrbTwoF6/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<iframe src="https://docs.google.com/presentation/d/18dfJPIu0ds870Y9fQtPkXnZrWvTptGvp4OYFU4TWQJ4/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+<iframe src="https://docs.google.com/presentation/d/1wcK2kLiyWAXcoUfOfp438rsT0zGmfPcHAEAxhBGE4KE/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
