--- a/for-students/tgui2016.md
+++ b/for-students/tgui2016.md
@@ -33,13 +33,36 @@ Zaliczenie:
   * Zapisz obserwacje. Jeśli wystąpiły jakieś problemy, wyciągnij wnioski i popraw swój prototyp.
   
 4. Prototypowanie na komputerze
-  * TBA
-  
+  Należy użyć komputerowego narzędzia do prototypowania interfejsu graficznego, np. [Pencil](http://pencil.evolus.vn/). 
+  Prototyp stworzony na komputerze powinien charakteryzować się:
+  * Dużą *wiernością* w wyglądzie. Za pomocą prototypu sprawdź jak rzeczywiście będzie wyglądać
+    końcowa implementacja interfejsu. Rozłóż na ekranie poszczególne elementy w taki sposób
+    jak przewidujesz, że będą rozłożone w docelowej aplikacji.
+    Podejmij decyzje dotyczące kolorów, czcionek, wyrównania tekstu, ikon.
+  * Dużą *wiernością* w odbiorze.
+    Prototyp powinien w miarę dokładnie odpowiadać typowi interfejsu, jaki został
+    wybrany (desktop, web, mobile).
+  * Powinien *implementować* wszystkie funkcjonalności przewidziane przez opracowany
+    wcześniej scenariusz. Nie powinien też wykraczać poza ten scenariusz.
+  * Nie ma potrzeby implementowania backend'u na tym etapie.
+
 5. Implementacja
-  * TBA
+  * Interfejs należy zaimplementoawć w technologii adekwatnej do wybranego typu interfejsu
+    (desktop, web, mobile).
+  * Nie ma potrzeby implementowania backend'u (np. dostęp do bazy danych, zapisywanie danych)
+    aczkolwiek interfejs powinien prezentować przykładowe dane.
+  * Interfejs powinien symulować operacje, które da się wykonać przy użyciu docelowego systemu.
+    Przykładowo, jeśli system ma służyć do rejestracji pacjentów, osoba testująca powinna
+    mieć możliwość testowego stworzenia i dodania przykładowej osoby. Jak wspomniano wcześniej,
+    nie ma konieczności implementowania funkcji służących do dostępu do danych.
   
 6. Testowanie
-  * TBA
+  * Poproś 3 osoby o wykonanie testów polegających na zrealizowaniu opracowanych wcześniej
+    scenariuszy.
+  * Zbierz od testerów komentarze.
+  * Podsumuj zebrane informacje i wyciągnij wnioski dotyczące trzech podstawowych wymiarów
+    użyteczności.
+  * Czy projekt intefrejsu wymaga poprawek? Umotywuj prawidłowo swoją odpowiedź.
 
 
 # Slajdy
