--- a/for-students/tgui2016.md
+++ b/for-students/tgui2016.md
@@ -12,6 +12,11 @@ Zaliczenie:
 * Obecność i praca na laboratorium zakończona prezentacją raportu.
 * Kolokwium z treści wykładowych.
 
+**Egzamin:**
+
+* 23 stycznia 2017 r., godz. 8:00, sala 127.
+* Materiały do egzaminu i kolokwium - dostępne wkrótce.
+
 # Laboratorium
 
 1. Propozycje projektów i analiza
