--- a/for-students/tgui2016.md
+++ b/for-students/tgui2016.md
@@ -14,8 +14,8 @@ Zaliczenie:
 
 **Egzamin:**
 
-* 23 stycznia 2017 r., godz. 8:00, sala 127.
-* Materiały do egzaminu i kolokwium - dostępne wkrótce.
+* **23 stycznia 2017 r., godz. 8:00, sala 127.**
+* Materiały do egzaminu i kolokwium - **dostępne wkrótce**.
 
 # Laboratorium
 
