--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -12,7 +12,7 @@ Zasady zaliczenia:
 1. Obecność na laboratorium.
 2. Implementacja i prezentacja mini-projektów.
 3. Kolokwia wykładowe.
-  * [Wyniki z pierwszego kolokwium](pwir-wyniki-2016.pdf) Kolokwia do wglądu w godzinach konsultacji.
+  * [Wyniki z pierwszego kolokwium](pwir-wyniki-2016.pdf) (do wglądu w godzinach konsultacji).
 4. **Egzamin**.
   * **Zerowy:** 20 stycznia 2017 r., sala 243, godz. 11:30.
   * **Pierwszy termin:** 23 stycznia 2017 r., sala 243, godz. 9:00.
