--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -14,8 +14,8 @@ Zasady zaliczenia:
 3. Kolokwia wykładowe.
   * [Wyniki z pierwszego kolokwium](pwir-wyniki-2016.pdf) (do wglądu w godzinach konsultacji).
 4. **Egzamin**.
-  * **Zerowy:** 20 stycznia 2017 r., sala 243, godz. 11:30.
-  * **Pierwszy termin:** 23 stycznia 2017 r., sala 243, godz. 9:00.
+  * **Termin zerowy:** 20 stycznia 2017 r., sala 243, godz. 11:30.
+  * Pierwszy termin: 23 stycznia 2017 r., sala 243, godz. 9:00.
 
 # Terminy kolokwiów:
 
