--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -13,9 +13,11 @@ Zasady zaliczenia:
 2. Implementacja i prezentacja mini-projektów.
 3. Kolokwia wykładowe.
   * [Wyniki z pierwszego kolokwium](pwir-wyniki-2016.pdf) (do wglądu w godzinach konsultacji).
+  * Materiały do przygotowania do kolokwium - dostępne wkrótce.
 4. **Egzamin**.
   * **Termin zerowy:** 20 stycznia 2017 r., sala 243, godz. 11:30.
   * Pierwszy termin: 23 stycznia 2017 r., sala 243, godz. 9:00.
+  * Materiały do przygotowania do egzaminu - dostępne wkrótce.
 
 # Terminy kolokwiów:
 
