--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -5,25 +5,22 @@ permalink: /for-students/pwir
 exclude: true
 ---
 
-# Informacje
-
-Zasady zaliczenia:
+# Zasady zaliczenia:
 
 1. Obecność na laboratorium.
 2. Implementacja i prezentacja mini-projektów.
 3. Kolokwia wykładowe.
-  * [Wyniki z pierwszego kolokwium](pwir-wyniki-2016.pdf) (do wglądu w godzinach konsultacji).
+  * Terminy kolokwiów:
+   * 30 listopada 2016 r. 
+    * [Wyniki z pierwszego kolokwium](pwir-wyniki-2016.pdf) (do wglądu w godzinach konsultacji).
+   * 18 stycznia 2016 r.
   * Materiały do przygotowania do kolokwium - dostępne wkrótce.
 4. **Egzamin**.
-  * **Termin zerowy:** 20 stycznia 2017 r., sala 243, godz. 11:30.
-  * Pierwszy termin: 23 stycznia 2017 r., sala 243, godz. 9:00.
+  * **Termin zerowy:**
+   * 20 stycznia 2017 r., sala 243, godz. 11:30.
+  * Pierwszy termin
+   * 23 stycznia 2017 r., sala 243, godz. 9:00.
   * Materiały do przygotowania do egzaminu - dostępne wkrótce.
-
-# Terminy kolokwiów:
-
-1. 30 listopada 2016 r. 
-2. 18 stycznia 2016 r.
-
 
 # Slajdy
 
