--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -18,7 +18,7 @@ exclude: true
 4. **Egzamin**.
    * **Termin zerowy:**
      * 20 stycznia 2017 r., sala 243, godz. 11:30.
-   * Pierwszy termin
+   * Pierwszy termin:
      * 23 stycznia 2017 r., sala 243, godz. 9:00.
    * Materiały do przygotowania do egzaminu - dostępne wkrótce.
 
