--- a/for-students/pwir2016.md
+++ b/for-students/pwir2016.md
@@ -20,7 +20,7 @@ exclude: true
      * 20 stycznia 2017 r., sala 243, godz. 11:30.
    * Pierwszy termin:
      * 23 stycznia 2017 r., sala 243, godz. 9:00.
-   * Materiały do przygotowania do egzaminu - dostępne wkrótce.
+   * **Materiały do przygotowania do egzaminu i [kolokwium](pwir-kolokwium-2.pdf)**.
 
 # Slajdy
 
