--- a/for-students/ai22016.md
+++ b/for-students/ai22016.md
@@ -9,5 +9,8 @@ exclude: true
 
 # Laboratorium
 
+Materiały do początkowych zajęć laboratoryjnych:
+1. [https://developers.google.com/edu/python/exercises/basic](https://developers.google.com/edu/python/exercises/basic)
+
 # Slajdy
 
