--- a/for-students/ai22016.md
+++ b/for-students/ai22016.md
@@ -7,10 +7,19 @@ exclude: true
 
 # Informacje
 
+Zasady zaliczenia:
+* Egzamin: 14 czerwca.
+* 2 x kolokwium wykładowe: 12 kwietnia 2017 i 7 czerwca 2017.
+* Laboratorium
+* Projekt
+
+Materiały:
+* [Dive into Python 3](http://www.diveintopython3.net)
+* [Ćwiczenia](http://exercism.io/languages/python/exercises)
+* [Ćwiczenia](http://www.ling.gu.se/~lager/python_exercises.html)
+
 # Laboratorium
 
 Materiały do początkowych zajęć laboratoryjnych:
 1. [https://developers.google.com/edu/python/exercises/basic](https://developers.google.com/edu/python/exercises/basic)
-
-# Slajdy
 
