--- a/for-students/ai22016.md
+++ b/for-students/ai22016.md
@@ -17,6 +17,7 @@ Materiały:
 * [Dive into Python 3](http://www.diveintopython3.net)
 * [Ćwiczenia](http://exercism.io/languages/python/exercises)
 * [Ćwiczenia](http://www.ling.gu.se/~lager/python_exercises.html)
+* [Rozszerzony kurs języka Python](https://www.ii.uni.wroc.pl/~marcinm/dyd/python/)
 
 # Laboratorium
 
