--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -23,4 +23,39 @@ Materiały:
 
 Materiały do początkowych zajęć laboratoryjnych:
 1. [https://developers.google.com/edu/python/exercises/basic](https://developers.google.com/edu/python/exercises/basic)
+2. [https://github.com/piotrlasek/python-labs](https://github.com/piotrlasek/python-labs)
 
+# Projekty
+
+Założenia:
+* Wszystkie proponowane projekty dotyczą wykonania aplikacji internetowej w technologii
+  Python + Django.
+* Aplikację należy zaimplementować samodzielnie udostępniając kod na swoim koncie GitHub.
+* Do aplikacji należy przygotować dokumentację w postaci pliku README.md dołączonego
+  do repozytorium GitHub.
+* Termin prezentacji projektu to ostatnie zajęcia laboratoryjne w bieżącym semestrze.
+* Elementy, które będą brane pod uwagę przy ocenie.
+
+Lista projektów do wyboru:
+ 1. 
+ 2. 
+ 3. 
+ 4. 
+ 5. 
+ 6. 
+ 7. 
+ 8. 
+ 9. 
+10. 
+11. 
+12. 
+13. 
+14. 
+15. 
+16. 
+17. 
+18. 
+19. 
+20. 
+
+Zapisy na projekty dostępne są tutaj: []()
