--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -34,28 +34,19 @@ Założenia:
 * Do aplikacji należy przygotować dokumentację w postaci pliku README.md dołączonego
   do repozytorium GitHub.
 * Termin prezentacji projektu to ostatnie zajęcia laboratoryjne w bieżącym semestrze.
+* Zespoły mogą być składać się z 3-4 osób.
 * Elementy, które będą brane pod uwagę przy ocenie.
 
 Lista projektów do wyboru:
- 1. 
- 2. 
- 3. 
- 4. 
- 5. 
- 6. 
- 7. 
- 8. 
- 9. 
-10. 
-11. 
-12. 
-13. 
-14. 
-15. 
-16. 
-17. 
-18. 
-19. 
-20. 
+ 1. System obsługi sylabusów przedmiotowych.
+ 2. Aplikacja do wizualizacji wyników eksploracji danych.
+ 3. Aplikacja do generowania raportów biznesowych.
+ 4. System zarządzania pracownikami 
+ 5. Aplikacja do wizualizacji danych.
+ 6. ...
+ 7. ...
+ 8. ...
+ 9. ...
+10. ...
 
 Zapisy na projekty dostępne są tutaj: []()
