--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -37,16 +37,17 @@ Założenia:
 * Zespoły mogą być składać się z 3-4 osób.
 * Elementy, które będą brane pod uwagę przy ocenie.
 
-Lista projektów do wyboru:
+Lista projektów do wyboru (w przygotowaniu):
  1. System obsługi sylabusów przedmiotowych.
  2. Aplikacja do wizualizacji wyników eksploracji danych.
  3. Aplikacja do generowania raportów biznesowych.
  4. System zarządzania pracownikami 
  5. Aplikacja do wizualizacji danych.
- 6. ...
+ 6. Aplikacja do analizy danych tekstowych.
  7. ...
  8. ...
  9. ...
 10. ...
 
-Zapisy na projekty dostępne są tutaj: []()
+Do **24 kwietnia ** należy dokonać zapisu na wybrany temat
+na stronie: []().
