--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -15,8 +15,8 @@ Zasady zaliczenia:
 
 Materiały:
 * [Dive into Python 3](http://www.diveintopython3.net)
-* [Ćwiczenia](http://exercism.io/languages/python/exercises)
-* [Ćwiczenia](http://www.ling.gu.se/~lager/python_exercises.html)
+* [Ćwiczenia 1](http://exercism.io/languages/python/exercises)
+* [Ćwiczenia 2](http://www.ling.gu.se/~lager/python_exercises.html)
 * [Rozszerzony kurs języka Python](https://www.ii.uni.wroc.pl/~marcinm/dyd/python/)
 
 # Laboratorium
