--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -5,6 +5,8 @@ permalink: /for-students/ai2
 exclude: true
 ---
 
+![Python](https://www.python.org/static/community_logos/python-logo-master-v3-TM.png)
+
 # Informacje
 
 Zasady zaliczenia:
