--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -5,7 +5,7 @@ permalink: /for-students/ai2
 exclude: true
 ---
 
-![Python](https://www.python.org/static/community_logos/python-logo-master-v3-TM.png = 200)
+![Python](https://www.python.org/static/community_logos/python-logo-master-v3-TM.png){:width="200px"}
 
 # Informacje
 
