--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -44,15 +44,18 @@ Założenia:
 
 Lista projektów do wyboru (w przygotowaniu):
  1. System obsługi sylabusów przedmiotowych.
- 2. Aplikacja do wizualizacji wyników eksploracji danych.
- 3. Aplikacja do generowania raportów biznesowych.
- 4. System zarządzania pracownikami 
- 5. Aplikacja do wizualizacji danych.
- 6. Aplikacja do analizy danych tekstowych.
- 7. ...
- 8. ...
- 9. ...
-10. ...
+ 1. System do integracji ... pracownikami.
+ 1. Aplikacja do eksploracji i wizualizacji eksploracji danych.
+ 1. Aplikacja do generowania raportów biznesowych.
+ 1. Aplikacja do eksploracji i wizualizacji danych.
+ 1. Aplikacja do analizy i wizualizacji danych tekstowych.
+ 1. Aplikacja do obslugi inteligentnego domu.
+ 1. Aplikacja do analizy i wizualizacji danych spolecznosciowych.
 
-Do **24 kwietnia** należy dokonać zapisu na wybrany temat
+Biblioteki:
+ * ggplot
+ * d3js
+ 
+
+Do **29 kwietnia** należy dokonać zapisu na wybrany temat
 na stronie: []().
