--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -27,9 +27,12 @@ Materiały do początkowych zajęć laboratoryjnych:
 1. [https://developers.google.com/edu/python/exercises/basic](https://developers.google.com/edu/python/exercises/basic)
 2. [https://github.com/piotrlasek/python-labs](https://github.com/piotrlasek/python-labs)
 
-# Projekty
+# Projekty (w przygotowaniu)
 
-Założenia:
+**Uwaga:** Do **29 kwietnia** należy dokonać podzalu na zespoly oraz dokonac zapisu na 
+zapisu na wybrany przez zespol temat na stronie: []().
+
+Wymagania projektowe:
 * Wszystkie proponowane projekty dotyczą wykonania aplikacji internetowej w technologii
   Python + Django.
 * Aplikację należy zaimplementować samodzielnie udostępniając kod na swoim koncie GitHub.
@@ -38,11 +41,14 @@ Założenia:
 * Termin prezentacji projektu to ostatnie zajęcia laboratoryjne w bieżącym semestrze.
 * Zespoły mogą być składać się z 3-4 osób.
 * Elementy, które będą brane pod uwagę przy ocenie:
-  * a
-  * b
-  * c
-
-Lista projektów do wyboru (w przygotowaniu):
+  1. Dokumentacja wstepna i koncowa projektu.
+  1. Podzial pracy (Kazdy czlonek zespolu powinien byc zaangazowany we wszystkie fazy realizacji projektu).
+  1. Wykorzystanie Python i Django.
+  1. Wykorzystanie zewnetrznych biblitek.
+  1. Integracja uzytych narzedzi.
+  1. Kompletnosc projektu.
+  
+Lista projektów do wyboru :
  1. System obsługi sylabusów przedmiotowych.
  1. System do integracji ... pracownikami.
  1. Aplikacja do eksploracji i wizualizacji eksploracji danych.
@@ -52,10 +58,10 @@ Lista projektów do wyboru (w przygotowaniu):
  1. Aplikacja do obslugi inteligentnego domu.
  1. Aplikacja do analizy i wizualizacji danych spolecznosciowych.
 
-Biblioteki:
- * ggplot
- * d3js
- 
+Biblioteki, ktore moga byc przydatne:
+ * Wizualizacja
+   * ggplot
+    * d3js
+ * Analiza danych
+   * ...
 
-Do **29 kwietnia** należy dokonać zapisu na wybrany temat
-na stronie: []().
