--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -30,7 +30,7 @@ Materiały do początkowych zajęć laboratoryjnych:
 # Projekty (w przygotowaniu)
 
 **Uwaga:** Do **29 kwietnia** należy dokonać podzalu na zespoly oraz dokonac zapisu na 
-zapisu na wybrany przez zespol temat na stronie: []().
+zapisu na wybrany przez zespol temat na [stronie zapisów](https://docs.google.com/document/d/1ysbPqXybqgpxvLWPetOv--JI32nEqR8gYSTS3sWzMeA/edit?usp=sharing).
 
 Wymagania projektowe:
 * Wszystkie proponowane projekty dotyczą wykonania aplikacji internetowej w technologii
