--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -29,19 +29,20 @@ Materiały do początkowych zajęć laboratoryjnych:
 
 # Projekty (w przygotowaniu)
 
-**Uwaga:** Do **29 kwietnia** należy dokonać podzalu na zespoly oraz dokonac zapisu na 
-zapisu na wybrany przez zespol temat na [stronie zapisów](https://docs.google.com/document/d/1ysbPqXybqgpxvLWPetOv--JI32nEqR8gYSTS3sWzMeA/edit?usp=sharing).
+**Uwaga:** Do **29 kwietnia** należy dokonać podzialu na zespoly oraz dokonac zapisu na wybrany przez
+zespol temat na [stronie zapisów](https://docs.google.com/document/d/1ysbPqXybqgpxvLWPetOv--JI32nEqR8gYSTS3sWzMeA/edit?usp=sharing).
 
-Wymagania projektowe:
+Zalozenia i wymagania projektowe:
 * Wszystkie proponowane projekty dotyczą wykonania aplikacji internetowej w technologii
   Python + Django.
-* Aplikację należy zaimplementować samodzielnie udostępniając kod na swoim koncie GitHub.
+* Aplikację należy zaimplementować samodzielnie (w ramach zespolu) udostępniając kod na swoim koncie GitHub.
 * Do aplikacji należy przygotować dokumentację w postaci pliku README.md dołączonego
   do repozytorium GitHub.
-* Termin prezentacji projektu to ostatnie zajęcia laboratoryjne w bieżącym semestrze.
-* Zespoły mogą być składać się z 3-4 osób.
+* Termin prezentacji projektu to **predostatnie zajęcia** laboratoryjne w bieżącym semestrze.
+* Zespoły mogą być składać się maksymalnie z 4 osób.
 * Elementy, które będą brane pod uwagę przy ocenie:
   1. Dokumentacja wstepna i koncowa projektu.
+  1. Analiza wymagan funkcjonalnych projektu.
   1. Podzial pracy (Kazdy czlonek zespolu powinien byc zaangazowany we wszystkie fazy realizacji projektu).
   1. Wykorzystanie Python i Django.
   1. Wykorzystanie zewnetrznych biblitek.
@@ -49,19 +50,18 @@ Wymagania projektowe:
   1. Kompletnosc projektu.
   
 Lista projektów do wyboru :
- 1. System obsługi sylabusów przedmiotowych.
- 1. System do integracji ... pracownikami.
- 1. Aplikacja do eksploracji i wizualizacji eksploracji danych.
- 1. Aplikacja do generowania raportów biznesowych.
- 1. Aplikacja do eksploracji i wizualizacji danych.
- 1. Aplikacja do analizy i wizualizacji danych tekstowych.
- 1. Aplikacja do obslugi inteligentnego domu.
+ 1. Aplikacja do predykcji i wizualizacji zachowania klientów.
+ 1. Aplikacja do wizualizacji wyników eksploracji (np. grupowanie, klasyfikacja) danych.
+ 1. Aplikacja do zarzadzania i generowania (w postaci graficznej i tekstowej) raportów biznesowych.
  1. Aplikacja do analizy i wizualizacji danych spolecznosciowych.
-
+ 1. Aplikacja do predykcji i wizualizacji pogody na podstawie danych historycznych.
+ 1. Aplikacja do analizy sentymentalnej (sentiment analysis) i wizualizacji danych tekstowych.
+ 1. Aplikacja do predykcji i wizualizacji sprzedazy w przedsiebiorstwie na podstawie danych historycznych.
+ 
 Biblioteki, ktore moga byc przydatne:
- * Wizualizacja
+ * Wizualizacja:
    * ggplot
-    * d3js
- * Analiza danych
-   * ...
+   * d3js
+ * Analiza danych:
+   * 
 
