--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -20,6 +20,7 @@ Materiały:
 * [Rozszerzony kurs języka Python](https://www.ii.uni.wroc.pl/~marcinm/dyd/python/)
 * [Ćwiczenia 1](http://exercism.io/languages/python/exercises)
 * [Ćwiczenia 2](http://www.ling.gu.se/~lager/python_exercises.html)
+* [Przygotowanie do kolokwium i egzaminu](https://docs.python.org/3/faq/programming.html)
 
 # Laboratorium
 
@@ -29,39 +30,42 @@ Materiały do początkowych zajęć laboratoryjnych:
 
 # Projekty (w przygotowaniu)
 
-**Uwaga:** Do **29 kwietnia** należy dokonać podzialu na zespoly oraz dokonac zapisu na wybrany przez
-zespol temat na [stronie zapisów](https://docs.google.com/document/d/1ysbPqXybqgpxvLWPetOv--JI32nEqR8gYSTS3sWzMeA/edit?usp=sharing).
+**Uwaga:** Do **29 kwietnia** należy dokonać podziału na zespoły oraz dokonać zapisu na wybrany przez
+zespół temat na [stronie zapisów](https://docs.google.com/document/d/1ysbPqXybqgpxvLWPetOv--JI32nEqR8gYSTS3sWzMeA/edit?usp=sharing).
 
-Zalozenia i wymagania projektowe:
+Założenia i wymagania projektowe:
 * Wszystkie proponowane projekty dotyczą wykonania aplikacji internetowej w technologii
   Python + Django.
-* Aplikację należy zaimplementować samodzielnie (w ramach zespolu) udostępniając kod na swoim koncie GitHub.
+* Aplikację należy zaimplementować samodzielnie (w ramach zespolu) udostępniając kod
+  na swoim koncie GitHub.
 * Do aplikacji należy przygotować dokumentację w postaci pliku README.md dołączonego
   do repozytorium GitHub.
-* Termin prezentacji projektu to **predostatnie zajęcia** laboratoryjne w bieżącym semestrze.
-* Zespoły mogą być składać się maksymalnie z 4 osób.
+* Termin prezentacji projektu to **przedostatnie zajęcia** laboratoryjne w bieżącym
+  semestrze.
+* Zespoły mogą być składać się maksymalnie z **4 osób**.
 * Elementy, które będą brane pod uwagę przy ocenie:
   1. Dokumentacja wstepna i koncowa projektu.
   1. Analiza wymagan funkcjonalnych projektu.
-  1. Podzial pracy (Kazdy czlonek zespolu powinien byc zaangazowany we wszystkie fazy realizacji projektu).
+  1. Podzial pracy (Kazdy czlonek zespolu powinien byc zaangazowany we wszystkie fazy
+     realizacji projektu).
   1. Wykorzystanie Python i Django.
-  1. Wykorzystanie zewnetrznych biblitek.
-  1. Integracja uzytych narzedzi.
-  1. Kompletnosc projektu.
+  1. Wykorzystanie zewnętrznych biblitek.
+  1. Integracja użytych narzedzi.
+  1. Kompletność projektu.
   
 Lista projektów do wyboru :
  1. Aplikacja do predykcji i wizualizacji zachowania klientów.
  1. Aplikacja do wizualizacji wyników eksploracji (np. grupowanie, klasyfikacja) danych.
  1. Aplikacja do zarzadzania i generowania (w postaci graficznej i tekstowej) raportów biznesowych.
- 1. Aplikacja do analizy i wizualizacji danych spolecznosciowych.
+ 1. Aplikacja do analizy i wizualizacji danych społecznościowych.
  1. Aplikacja do predykcji i wizualizacji pogody na podstawie danych historycznych.
  1. Aplikacja do analizy sentymentalnej (sentiment analysis) i wizualizacji danych tekstowych.
- 1. Aplikacja do predykcji i wizualizacji sprzedazy w przedsiebiorstwie na podstawie danych historycznych.
+ 1. Aplikacja do predykcji i wizualizacji sprzedaży w przedsiębiorstwie na podstawie danych historycznych.
  
-Biblioteki, ktore moga byc przydatne:
- * Wizualizacja:
-   * ggplot
-   * d3js
- * Analiza danych:
-   * 
-
+Biblioteki:
+ * [20 bibliotek, bez których programista Pythona nie może żyć](https://pythontips.com/2013/07/30/20-python-libraries-you-cant-live-without/)
+ * [Przydatne moduły, pakiety i biblioteki](https://wiki.python.org/moin/UsefulModules)
+ * Biblioteki do analizy danych:
+   * [Lista 1](https://www.upwork.com/hiring/data/15-python-libraries-data-science/)
+   * [Lista 2](https://github.com/rasbt/pattern_classification/blob/master/resources/python_data_libraries.md)
+ * [Biblioteki do wizualizacji danych](https://blog.modeanalytics.com/python-data-visualization-libraries/)
