--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -66,6 +66,6 @@ Biblioteki:
  * [20 bibliotek, bez których programista Pythona nie może żyć](https://pythontips.com/2013/07/30/20-python-libraries-you-cant-live-without/)
  * [Przydatne moduły, pakiety i biblioteki](https://wiki.python.org/moin/UsefulModules)
  * Biblioteki do analizy danych:
-   * [Lista 1](https://www.upwork.com/hiring/data/15-python-libraries-data-science/)
-   * [Lista 2](https://github.com/rasbt/pattern_classification/blob/master/resources/python_data_libraries.md)
+   * [15 bibliotek do analizy danych](https://www.upwork.com/hiring/data/15-python-libraries-data-science/)
+   * [Biblioteki do analizy danych](https://github.com/rasbt/pattern_classification/blob/master/resources/python_data_libraries.md)
  * [Biblioteki do wizualizacji danych](https://blog.modeanalytics.com/python-data-visualization-libraries/)
