--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -67,5 +67,5 @@ Biblioteki:
  * [Przydatne moduły, pakiety i biblioteki](https://wiki.python.org/moin/UsefulModules)
  * Biblioteki do analizy danych:
    * [15 bibliotek do analizy danych](https://www.upwork.com/hiring/data/15-python-libraries-data-science/)
-   * [Biblioteki do analizy danych](https://github.com/rasbt/pattern_classification/blob/master/resources/python_data_libraries.md)
+   * [Przydatne biblioteki do analizy danych](https://github.com/rasbt/pattern_classification/blob/master/resources/python_data_libraries.md)
  * [Biblioteki do wizualizacji danych](https://blog.modeanalytics.com/python-data-visualization-libraries/)
