--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -18,9 +18,8 @@ Zasady zaliczenia:
 Materiały:
 * [Dive into Python 3](http://www.diveintopython3.net)
 * [Rozszerzony kurs języka Python](https://www.ii.uni.wroc.pl/~marcinm/dyd/python/)
-* [Ćwiczenia 1](http://exercism.io/languages/python/exercises)
-* [Ćwiczenia 2](http://www.ling.gu.se/~lager/python_exercises.html)
-* [Przygotowanie do kolokwium i egzaminu](https://docs.python.org/3/faq/programming.html)
+* Ćwiczenia 1: [Link 1](http://exercism.io/languages/python/exercises), [Link 2](http://www.ling.gu.se/~lager/python_exercises.html)
+* [Pytania i odpowiedzi](https://docs.python.org/3/faq/programming.html)
 
 # Laboratorium
 
@@ -28,7 +27,7 @@ Materiały do początkowych zajęć laboratoryjnych:
 1. [https://developers.google.com/edu/python/exercises/basic](https://developers.google.com/edu/python/exercises/basic)
 2. [https://github.com/piotrlasek/python-labs](https://github.com/piotrlasek/python-labs)
 
-# Projekty (w przygotowaniu)
+# Projekty
 
 **Uwaga:** Do **29 kwietnia** należy dokonać podziału na zespoły oraz dokonać zapisu na wybrany przez
 zespół temat na [stronie zapisów](https://docs.google.com/document/d/1ysbPqXybqgpxvLWPetOv--JI32nEqR8gYSTS3sWzMeA/edit?usp=sharing).
@@ -53,7 +52,7 @@ Założenia i wymagania projektowe:
   1. Integracja użytych narzedzi.
   1. Kompletność projektu.
   
-Lista projektów do wyboru :
+Lista projektów do wyboru:
  1. Aplikacja do predykcji i wizualizacji zachowania klientów.
  1. Aplikacja do wizualizacji wyników eksploracji (np. grupowanie, klasyfikacja) danych.
  1. Aplikacja do zarzadzania i generowania (w postaci graficznej i tekstowej) raportów biznesowych.
