--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -62,7 +62,7 @@ Lista projektów do wyboru:
  1. Aplikacja do predykcji i wizualizacji sprzedaży w przedsiębiorstwie na podstawie danych historycznych.
  
 Biblioteki:
- * [20 bibliotek, bez których programista Pythona nie może żyć](https://pythontips.com/2013/07/30/20-python-libraries-you-cant-live-without/)
+ * [20 bibliotek, bez których programista Pythona (podobno) nie może żyć](https://pythontips.com/2013/07/30/20-python-libraries-you-cant-live-without/)
  * [Przydatne moduły, pakiety i biblioteki](https://wiki.python.org/moin/UsefulModules)
  * Biblioteki do analizy danych:
    * [15 bibliotek do analizy danych](https://www.upwork.com/hiring/data/15-python-libraries-data-science/)
