--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -29,8 +29,10 @@ Materiały do początkowych zajęć laboratoryjnych:
 
 # Projekty
 
-**Uwaga:** Do **29 kwietnia** należy dokonać podziału na zespoły oraz dokonać zapisu na wybrany przez
-zespół temat na [stronie zapisów](https://docs.google.com/document/d/1ysbPqXybqgpxvLWPetOv--JI32nEqR8gYSTS3sWzMeA/edit?usp=sharing).
+**Uwaga:** Do **29 marca** należy dokonać podziału na zespoły oraz dokonać zapisu na wybrany przez
+zespół temat na [stronie zapisów](https://docs.google.com/document/d/1ysbPqXybqgpxvLWPetOv--JI32nEqR8gYSTS3sWzMeA/edit?usp=sharing). Do dnia **5 kwietnia** należy przygotować dokumentację wstępną, która zawierać będzie opracowane przez zespół założenia projektu dotyczące planowanych funkcjonalności, wykorzystanych technologii i metod testowania.
+
+**Uwaga:** Studenci, które nie dokonają zapisu na projekt i nie dostarczą dokumentacji wstępnej (w wyznaczonych terminach) uzyskują dotatkowe -0,5 stopnia do oceny końcowej z zaliczenia przedmiotu.
 
 Założenia i wymagania projektowe:
 * Wszystkie proponowane projekty dotyczą wykonania aplikacji internetowej w technologii
